# brow

./: Cargo.toml
src/: core.rs  main.rs  models.rs
src/core/: cmd.rs  loader.rs  utils.rs  zip.rs
src/models/: chrome_driver.rs
