[package]
name = "brow"
version = "0.1.0"
edition = "2021"
description = "Lib for downloading latest web drivers for chrome, firefox and opera browsers"

[dependencies]
# async runtime
tokio = { version = "1.42.0", features = ["full"] }
# logger dep
log = "0.4"
# logger also to file
fern = { version = "0.7.1", features = ["colored"] }
# same as lazy static
once_cell = "1.20.2"
# coloring logs
colored = "2.2.0"
# reqester
reqwest = { version = "0.12", features = ["json"] }
# A utility library for working with bytes
bytes = "1"
# serde core
serde = { version = "1.0.215" , features = ["derive"] }
# json ser-deser
serde_json = "1.0.133"
# helper to compare string versions
version-compare = "0.2.0"
# read and write zip files
zip = "2.2.1"
# walking a directory recursively
walkdir = "2.5.0"
# uuid
uuid = { version = "1.11.0" , features = ["v4", "fast-rng", "macro-diagnostics"] }
# time and date
chrono = "0.4.39"
# to find home dir
homedir = "0.3.4"
